#add_subdirectory(AADC_ControllerPID)
#add_subdirectory(AADC_MarkerDetection)
add_subdirectory(AADC_LaneTracking)
#add_subdirectory(AADC_EmergencyBraking)
#add_subdirectory(AADC_LaneFollower)
#add_subdirectory(AADC_WheelSpeedController)
#add_subdirectory(AADC_SteeringController)
#add_subdirectory(AADC_SpeedController)
add_subdirectory(AADC_Maneuverright)
#add_subdirectory(AADC_PullOut)

